# deepmethod

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  Nir.pro  README  build_mpich  config.h  configure.ac  deep.cbp  deep.layout  deepmethod.geany
doc/: Makefile.am  deeepmethod.1  deepmethod.1  deepmethod.conf.5
examples/abcde/: deep_crops-vals-07-02-2021-v4.ini
examples/chickpea/: chickpea-Adiyaman.1-i-p-20.ini
examples/drosophila/: gt_mRNA58_foc.ini.src  toy_25_3_100.ini
examples/mungbean/: vigna-sdm-loc-000.ini  vigna-sdm-loc.ini
examples/r_interpreter/: rmxseqd.ini  rmxseqd_c2017_tatar_1.ini
examples/soybean/: soynlreg.ini
examples/test_functions_python/: deep_rastr.ini  deep_schwef.ini  rastrign_func.py  schwefel_func.py
examples/wheat/: deep_clust_01.ini
libdeep/: CMakeLists.txt  Makefile.am  dparchive.c  dparchive.h  dpdeep.c  dpdeep.h  dpevaluation.c  dpevaluation.h  dpindivid.c  dpindivid.h  dploop.c  dploop.h  dpmutation.c  dpmutation.h  dpopt.c  dpopt.h  dposda.c  dposda.h  dppopulation.c  dppopulation.h  dprecombination.c  dprecombination.h  dpsettings.c  dpsettings.h  dptarget.c  dptarget.h  libdeep-1.0.pc.in  libdeep_openmpi-1.0.pc.in
libxmod/: CMakeLists.txt  Makefile.am  libxmod-1.0.pc.in  xmmodel.c  xmmodel.h
nsis/: DEEPMETHOD.nsis.in  mingwbuild.in
po/: ChangeLog  POTFILES.in  ru.po
r_from_c/: build_and_run_g_spawn_ls_example.sh  build_and_run_hello_glib.sh  build_and_run_simple.sh  build_and_run_simple2.sh  build_and_run_simple3.sh  g_spawn_ls_example.c  simple2.c  spawn.c
r_from_c/bash_pool_with_interpreter/: build_simple.sh  simple.c
r_from_c/g_async_queue_test/: simple.c
r_from_c/g_spawn_test/: build_and_run_g_spawn_r3.sh  build_spawn_R.sh  g_spawn_r3.c  helper.c
r_from_c/g_thread_pool_test/: simple.c
r_from_c/other/: build_and_run_g_spawn_r.sh  build_and_run_g_spawn_r2.sh  build_and_run_g_spawn_r3.sh  build_and_run_g_spawn_r_simple2.sh  build_and_run_simple.sh  build_and_run_spawn.sh  g_spawn_r.c  g_spawn_r2.c  g_spawn_r3.c  g_spawn_r_simple2.c  hello_glib.c  simple.c  simple3.c
r_from_c/pool_with_interpreter/: simple.c
r_from_c/pool_with_queue/: simple.c
tools/: Makefile.am  deepmethod.c  dpdeepctl.c  dpdeepctl.h  xmtranslate.c  xmtranslate.h
