
lib_LTLIBRARIES = \
	libdeep.la

libdeep_la_SOURCES = \
	dpindivid.c \
	dpindivid.h \
	dppopulation.c \
	dppopulation.h \
	dpmutation.c \
	dpmutation.h \
	dprecombination.c \
	dprecombination.h \
	dpevaluation.c \
	dpevaluation.h \
	dpdeep.c \
	dpdeep.h \
	dpopt.c \
	dpopt.h \
	dptarget.c \
	dptarget.h \
	dploop.c \
	dploop.h \
	dpsettings.c \
	dpsettings.h \
	dposda.c \
	dposda.h

libdeep_la_LIBADD = \
	$(DEEP_LIBS)

AM_CPPFLAGS = \
	$(DEEP_CFLAGS)

## File created by the gnome-build tools

